2005-09-15  Richard M. Stallman  <rms@gnu.org>

	* Makefile.in (update-game-score.o): New target.
	Compile and link this progranm separately.
	(update-game-score${EXEEXT}): Use GETOPTDEPTS.

2005-09-11  Jason Rumney  <jasonr@gnu.org>

	* makefile.w32-in (../src/config.h): Don't overwrite. Print a
	message instead.
	(../src/paths.h): Removed.

2005-07-27  Juanma Barranquero  <lekktu@gmail.com>

	* .cvsignore: Don't ignore fns-* and fns.el, which are no longer
	generated.  Ignore also ctags.c and getopt.h.

	* makefile.w32-in (clean): Delete getopt.h.
	(getopt.h): New rule.

2005-07-26  Paul Eggert  <eggert@cs.ucla.edu>

	Merge gnulib getopt implementation into Emacs.

	* Makefile.in (mostlyclean): Remove getopt.h, getopt.h-t.
	(GETOPT_H): New macro, from gnulib.
	(getopt.h): New rule, from gnulib.
	(GETOPTOBJS): Now autoconfigured.
	(GETOPTDEPS): getopt.h is now autoconfigured.
	(getopt.o, getopt1.o): Depend on $(GETOPT_H), not ${srcdir}/getopt.h.
	(getopt.o): Depend on ${srcdir}/gettext.h.
	(movemail.o): Depend on $(GETOPT_H).
	* getopt.c, getopt1.c: Sync from gnulib.
	* getopt_.h, getopt_int.h, gettext.h: New files, from gnulib.
	* getopt.h: Removed (now is getopt_.h).

2005-07-13  Ken Raeburn  <raeburn@gnu.org>

	* pop.c: Don't include des.h (or variants thereof); krb.h will do
	it.
	(sendline): Add the \r\n to the line in a temporary buffer, and
	write it all at once.

2005-07-04  Lute Kamstra  <lute@gnu.org>

	Update FSF's address in GPL notices.

2005-06-13  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in ($(DOC)): Fix last change.

2005-06-12  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in ($(DOC)): Depend on make-docfile.exe,
	temacs.exe, and the preloaded *.elc files.  This avoids
	unnecessary dumping and DOC rebuilding.

2005-06-04  Eli Zaretskii  <eliz@gnu.org>

	* ntlib.h (fileno): Don't define if already defined.

2005-05-25  Thien-Thi Nguyen  <ttn@gnu.org>

	* yow.c (setup_yow): Use EXIT_FAILURE in case no separators found.